--- a/Finance.API/appsettings.json
+++ b/Finance.API/appsettings.json
@@ -8,5 +8,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "Issuer": "https://localhost:5000",
+    "Audience": "https://localhost:5000",
+    "SigningKey": "corleonehear"
+  }
 }
