--- a/Finance.API/appsettings.json
+++ b/Finance.API/appsettings.json
@@ -9,6 +9,7 @@
     }
   },
   "AllowedHosts": "*",
+  "FMPKey": "Secret-Key",
   "JWT": {
     "Issuer": "https://localhost:5000",
     "Audience": "https://localhost:5000",
