--- a/Finance.API/appsettings.json
+++ b/Finance.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlCon": "Data Source=KADIR\\SQLEXPRESS;Initial Catalog=FinanceAppDb;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "SqlCon": "Data Source=KADIR\\SQLEXPRESS;Initial Catalog=FinanceDb;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
   "Logging": {
     "LogLevel": {
@@ -9,7 +9,7 @@
     }
   },
   "AllowedHosts": "*",
-  "FMPKey": "Secret-Key",
+  "FMPKey": "Io56uOjDIy1PL7PZ9IuerXMaKod6Wnw8",
   "JWT": {
     "Issuer": "https://localhost:5000",
     "Audience": "https://localhost:5000",
